--- a/app/views/usernot/send_email.html.erb
+++ b/app/views/usernot/send_email.html.erb
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Thanks </h1>
-    <a>Contract № <%= @cont_id %>  is opened by <%= current_user.name %> user.<a> 
+    <a>Contract № <%= @cont_id %>  is opened by  user.<a> 
     <p>Thanks for joining and have a great day! Now sign in and do
 awesome things!</p>
   </body>
