--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,11 +1,24 @@
+<div class="row">
+	
+			<div class="small-2 large-4 columns">
+				
+			</div>
+  			<div class="small-4 large-4 columns">
+  				<center></center>
+  			</div>
+  			<div class="small-6 large-4 columns"></div>	  
+        </div>
+
 
 <center>
   
-  <div class="small-6 large-4 columns">
+  <div class="row">
+  <div class="small-11 small-centered columns">
+
   	<div class="panel">
-  	<p>Новый клиент</p>
+  	<p>Редактировать профиль клиента</p>
   	<% @my_arr = [1,2,3,4,5]%>
-  	<%= form_for :client, url: clients_path do |f| %>
+  	<%= form_for @client do |f| %>
   	<%= f.label :"Фамилия"%>
   	<%= f.text_field :sname%>
   	<%= f.label :"Имя"%>
@@ -17,7 +30,7 @@
     <%= f.label 'Дата выдачи' %>
     <%= f.text_field :dn,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt2"%>
     <%= f.label 'Персональный номер' %>
-    <%= f.text_field :idnp%>
+    <%= f.text_field :idno%>
     <%= f.label 'Год рождения'%>
     <%= f.text_field :bdate,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt3" %>
     <%= f.label 'Страна проживания' %>
@@ -30,7 +43,7 @@
    	<%= f.label 'Контактный телефон' %>
    	<%= f.text_field :tel %>
   	</div>
-  	<%= f.submit "Содать клиента" %>
+  	<%= f.submit "Сохранить клиента" %>
   	<% end %>
   	
   	</div>
