--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,3 +1,75 @@
+<head>
+  <meta charset="utf-8">
+  <title>jQuery UI Accordion - Default functionality</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script>
+  $(function() {
+    $("#pan").toggle()
+    $("#clname").attr('disabled', 'disabled');
+  });
+  $(function() {
+  $("#rem2").change( function() {
+    $("#pan").toggle()
+    $("#clname").toggle()
+    $("#pser").toggle()
+  });
+  });
+  function disableElements()
+{
+document.getElementById("#clname").disabled=true;
+}
+  
+  $(function() {
+    $( "#dt" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      dateFormat: 'dd.mm.yy' }).val();
+       
+    $( "#format" ).change(function() {
+      $( "#dt" ).datetimepicker( "option", "dateFormat", $( this ).val() );
+    });
+  });
+    $(function() {
+    $( "#dt1" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      dateFormat: 'dd.mm.yy' }).val();
+       
+    $( "#format" ).change(function() {
+      $( "#dt1" ).datepicker( "option", "dateFormat", $( this ).val() );
+    });  
+  });
+  
+  $(function() {
+    $( "#dt2" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      dateFormat: 'dd.mm.yy' }).val();
+       
+    $( "#format" ).change(function() {
+      $( "#dt2" ).datepicker( "option", "dateFormat", $( this ).val() );
+    });  
+  });
+  
+    $(function() {
+    $( "#dt3" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      dateFormat: 'dd.mm.yy' }).val();
+       
+    $( "#format" ).change(function() {
+      $( "#dt3" ).datepicker( "option", "dateFormat", $( this ).val() );
+    });  
+  });
+  
+  </script>
+</head>
+
+
 <div class="row">
 	
 			<div class="small-2 large-4 columns">
@@ -9,13 +81,13 @@
   			<div class="small-6 large-4 columns"></div>	  
         </div>
 
-
+<%= button_to "Назад", clients_path,:method => :get, :class=>"button tiny"%>
 <center>
   
+  
   <div class="row">
-  <div class="small-11 small-centered columns">
-
-  	<div class="panel">
+  <div class="medium-6 columns">
+  <div class="panel">
   	<p>Редактировать профиль клиента</p>
   	<% @my_arr = [1,2,3,4,5]%>
   	<%= form_for @client do |f| %>
@@ -29,7 +101,11 @@
     <%= f.text_field :pseria %>
     <%= f.label 'Дата выдачи' %>
     <%= f.text_field :dn,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt2"%>
-    <%= f.label 'Персональный номер' %>
+  	</div>
+  </div>
+  <div class="medium-6 columns">
+  	<div class="panel">
+  	<%= f.label 'Персональный номер' %>
     <%= f.text_field :idno%>
     <%= f.label 'Год рождения'%>
     <%= f.text_field :bdate,:value => DateTime.now.strftime('%d.%m.%Y'),:id => "dt3" %>
@@ -42,11 +118,19 @@
    	<%= f.text_field :pemail %>
    	<%= f.label 'Контактный телефон' %>
    	<%= f.text_field :tel %>
-  	</div>
+   	<%= f.label 'Примечание' %>
+   	<%= f.text_area :comments,size: "30x4" %>
+  </div>
+</div>
+</div>
+  
+
+<center>  
   	<%= f.submit "Сохранить клиента" %>
+</center>  	
   	<% end %>
   	
-  	</div>
-  </div>
+  
+  
 	
-</center>
+
